test/error/iocheck/err3.rzy
// Error: response is not allowed to write state

component
  Err3
    response what():R{0,100};
    signal   event();
    
  implementation hfsm(A)
    
    state A
      response what():R{0,100}
        event();
        return 0;
      end
    end
    
  end

